...
            Container(
              decoration: BoxDecoration(
                shape: BoxShape.circle,
                border: Border.all(color: const Color(0xffb5d5ff)),
              ),
              child: IconButton(
                tooltip: 'Pause',
                onPressed: onPause,
                icon: const Icon(Icons.pause_rounded, size: 25),
                constraints: const BoxConstraints(minWidth: 46, minHeight: 46),
                padding: EdgeInsets.zero,
              ),
            ),
...
